src/test/ui/type-alias-impl-trait/issue-63279.full_tait.stderr
error[E0271]: type mismatch resolving `<[closure@$DIR/issue-63279.rs:10:5: 10:28] as FnOnce<()>>::Output == ()`
  --> $DIR/issue-63279.rs:7:16
   |
LL | type Closure = impl FnOnce();
   |                ^^^^^^^^^^^^^ expected `()`, found opaque type
   |
   = note: expected unit type `()`
            found opaque type `impl FnOnce<()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
